Refactor Task.java: change List.of to Arrays.asList